# python-advanced-materials

./: README.md
00.multithreading-vs-multiprocessing/: README.md  common.py  main.py
01.nested-decorators/: main.ipynb
02.class-decorators/: main.ipynb  requirements.txt
03.stings-and-bytes/: main.ipynb
04.floating-point-numbers/: main.ipynb
05.map-and-filter-vs-comprehensions/: main.ipynb  requirements.txt
06.stack-and-recursion/: main.ipynb
07.iterators-and-generators/: main.ipynb
08.creating-generators/: main.ipynb  requirements.txt
09.iterators-how-to/: main.ipynb
10.coroutines-and-yield-to-generator/: main.ipynb
11.asyncio-intro/: main.ipynb
12.aiohttp-asyncio-requests/: client.py  common.py  requirements.txt  server.py
13.event-loop/: main.py
14.asyncio-files/: main.py
15.metaclasses/: main.ipynb
18.slots/: main.ipynb
25.poetry-and-deps/: pyproject.toml
42.fastapi-intro/: main.py  pyproject.toml
46.fastapi-microservices/: config.py  create_permissions.py  main.py  pyproject.toml
46.fastapi-microservices/alembic/versions/: 2023_09_02_2235-41a603e5c107_create_access_permission_table.py
46.fastapi-microservices/common/: dependencies.py
46.fastapi-microservices/core/models/: __init__.py  access_permission.py  db_helper.py
46.fastapi-microservices/cruds/: permissions.py
46.fastapi-microservices/views/: __init__.py
46.fastapi-microservices/views/calc/: views.py
46.fastapi-microservices/views/permissions/: crud.py  schemas.py  views.py
46.fastapi-microservices/views/users/: crud.py  dependencies.py  schemas.py  views.py
(+82 files in other folders)
