[tool.poetry]
name = "25-poetry-and-deps"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
pytest = "^7.4.0"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
